syntax = "proto3";
option go_package = "./messages";

/* heart beat message with avaliable space + storage + retrievals */
message File {
    string fullpath = 1;
    bytes checksum = 2;
    uint64 size = 3;
    string action = 4;
    uint64 chunkamount = 5;
    repeated Chunk chunks = 6;
    bool approved = 7;
    uint64 chunksize = 8;
}

message Chunk {
    string fullpath = 1;
    uint64 order = 2;
    bytes checksum = 3;
    uint64 size = 4;
    bytes content = 5;
    repeated string replicanodename = 6;
    string action = 7;
    int64 start = 8;
}

message Status {
    bool success = 1;
    uint64 order = 2;
}


message Files {
    repeated File files = 1;
    bool approved = 2;
}

message Host {
    string name = 1;
    uint64 freespace = 2;
    uint64 requests = 3;
}

message Hosts {
    repeated Host hosts = 1;
}

message HeartBeat {
    string name = 1;
    uint64 requests = 2;
    uint64 free_space = 3;
}

message MapPair {
    string key = 1;
    uint32 value = 2;
}

message MapPairs {
    repeated MapPair reducejob = 1;
}

message Job {
    bytes plugin = 1;
    string plugin_name = 2;
    string input = 3;
    string output = 4;
    string action = 5;
    uint64 chunk_num = 6;
    uint32 reducer_num = 7;
    uint32 reducer_index = 8;
    repeated string reducername = 9;
    MapPairs mapPairs = 10;
    uint64 totalChunk = 11;
    string jobId = 12;
}

message Feedback {
    uint64 total_map = 1;
    uint64 completed_map = 2;
    uint64 total_reduce = 3;
    uint64 completed_reduce = 4;
    string type = 5;
}

message Wrapper {
    oneof msg {
        File file = 1;
        Files files = 2;
        Host host = 3;
        Chunk chunk = 4;
        HeartBeat heartbeat = 5;
        Hosts hosts = 6;
	    Status status = 7;
        MapPair mappair = 8;
        Job job = 9;
        Feedback feedback = 10;
        MapPairs mappairs = 11;
    }
}




